--- a/CountOnMe/View/Base.lproj/Main.storyboard
+++ b/CountOnMe/View/Base.lproj/Main.storyboard
@@ -52,6 +52,9 @@
                                         <state key="normal" title="x">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="tappedMultiplication:" destination="eqK-jh-KKu" eventType="touchUpInside" id="yaV-me-ahg"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="npu-ce-glv">
                                         <rect key="frame" x="177" y="0.0" width="44" height="63"/>
