ajout d'un scroll automatique, quelques changements mineurs
contrôleur :
ajout de la fonction scrollTextViewToBottom
modification de quelques erreurs (notamment les titres)

modèle : l'attribut textView est renommé en "text"

--- a/CountOnMe/View/Base.lproj/Main.storyboard
+++ b/CountOnMe/View/Base.lproj/Main.storyboard
@@ -237,7 +237,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="tappedMultiplication:" destination="eqK-jh-KKu" eventType="touchUpInside" id="yaV-me-ahg"/>
+                                                    <action selector="tappedMultiplicationButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="SDl-0x-x1j"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="npu-ce-glv">
@@ -248,7 +248,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="tappedDivision:" destination="eqK-jh-KKu" eventType="touchUpInside" id="0FR-b4-93e"/>
+                                                    <action selector="tappedDivisionButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="E0r-eG-t8C"/>
                                                 </connections>
                                             </button>
                                         </subviews>
